# video-downloader

./: .gitignore  BATCH_USAGE.md  LICENSE  README.md  config.py  constants.py  downloader.py  main.py  pyproject.toml  requirements.txt  setup.py  test_batch.py  ui.py  utils.py  video-downloader.spec
.github/workflows/: build-windows.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
openspec/: AGENTS.md  project.md
openspec/changes/standardize-doc-and-test-plan/: proposal.md  tasks.md
openspec/changes/standardize-doc-and-test-plan/specs/testing-and-docs/: spec.md
openspec/specs/batch-download/: spec.md
openspec/specs/config-and-filename/: spec.md
openspec/specs/desktop-ui/: spec.md
openspec/specs/download-core/: spec.md
openspec/specs/web-ui-api/: spec.md
scripts/: build.py  run_dev.py
src/: __init__.py  main.py
src/core/: __init__.py  batch_downloader.py  config.py  constants.py  downloader.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  file_utils.py  logger.py  system_utils.py  text_converter.py  time_utils.py  validators.py
src/web/: __init__.py  app.py
src/web/templates/: index.html
tests/: test_utils.py
